fixed overflow bug

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1489,7 +1489,7 @@ textarea {
 .expandable-panel {
   position: relative;
   min-height: 45px;
-  overflow: auto;
+  overflow: hidden;
   margin-bottom: 0px;
   border-bottom: 2px solid white;
   margin-right: -6%;
@@ -1531,7 +1531,7 @@ textarea {
 
 .expandable-panel-heading h6 {
   margin-bottom: 0;
-  padding: 0.5rem 0;
+  padding: 0.4rem 0;
   color: #FFFFFF;
 }
 
